syntax = "proto3";

package payment;

import "google/protobuf/timestamp.proto";

option go_package = "./payment";

// The Order service definition
service PaymentCallbackService {
  // payment callback using a template
  rpc PaymentCallback (PaymentCallbackRequest) 
    returns (PaymentCallbackResponse);
}

message PaymentCallbackRequest {
  string application_id = 1;
  string payment_id = 2;
  string transaction_id = 3;
  string status = 4;
  string user_fcm_token = 5;
  string user_id = 6;
  string full_name = 7;
  string email = 8;
}

message PaymentCallbackResponse {
  string message = 1;
}